<package format="2">
  <name>my_ros_package</name>
  <version>0.0.1</version>
  <description>A simple ROS package</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
