<package format="2">
  <name>mastering_ros_demo_pkg</name>
  <version>0.0.1</version>
  <description>A ROS package for demonstration</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
